--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
   
   <body>
     <heading><h1>FREE CODE STYLE!!</h1></heading>
+    <hr>
+    <p>Lorem ipsum dolor sit amet,<br> 
+      consectetur adipiscing elit,<br>
+      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+      Ut enim ad minim veniam,<br>
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br>
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+      Excepteur sint occaecat cupidatat non proident,<br>
+      sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+    </p>
   </body>
 
 </html>
