--- a/RandomHTML.html
+++ b/RandomHTML.html
@@ -3,12 +3,48 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="60">
     <title>RANDOM HTML!</title>
   </head>
   
   <body>
-  
+    <h1>I'm Mr. Heading 1!</h1>
+    <h2>I'm Sir. Heading 2!</h2>
+    <h3>I'm King Heading 3!</h3>
+    <h4>I Am Heading 4!</h4>
+    <h5>I think your getting it know!</h5>
+    <h6>I bet you know who I am!</h6>
+    <p>I am a paragraph, even if it doesn't seem like it</p>
+    <!--I am a comment!-->
+    <br> <!--He is a line break-->
+    <hr><!--I am a thematic change?!?!?-->
+    <p>This is a <abbr title="abbreviation">abbr</abbr>!</p>
+    <address>1010 This is a Address, Code School OH USA</address>
+    <b>I FEEL BOLD!</b>
+    <p>I think I am <bdi>Isolated</bdi>!</p>
+    <p><bdo dir="rtl">I am backwards</bdo></p>
+    <p><blockquote cite="#">I am a blocky quote!</blockquote></p>
+    <p><cite>The Cite</cite> by someone!</p>
+    <code>print("This is code!");</code>
+    <p>I am <del>deleted</del></p>
+    <p><dfn>dfn</dfn> is a HTML tag which represents the term that is being defined</p>
+    <p>I am <em>emphasized</em></p>
+    <i>I am in a alernate voice</i>
+    <p>I have been <ins>inserted!</ins></p>
+    <kdb>I have been typed!</kdb>
+    <p>I have been <mark>marked</mark>!</p>
+    <pre>
+    I
+    am
+    preformatted!
+    </pre>
+    <q>"I am a small quote" -John Doe</q>
+    <s>I am wrong</s>
+    <samp>Output: I am Sample Output from a program!</samp>
+    <small>I am small</small>
+    <strong>I am strong!</strong>
+    <sub>I am sub-scripted</sub>
+    <sup>and I am super-scripted</sup>
+    
   </body>
 </html>
   
