--- a/RandomHTML.html
+++ b/RandomHTML.html
@@ -37,13 +37,13 @@
     am
     preformatted!
     </pre>
-    <q>"I am a small quote" -John Doe</q>
-    <s>I am wrong</s>
-    <samp>Output: I am Sample Output from a program!</samp>
-    <small>I am small</small>
-    <strong>I am strong!</strong>
-    <sub>I am sub-scripted</sub>
-    <sup>and I am super-scripted</sup>
+  <p><q>"I am a small quote" -John Doe</q></p>
+  <p><s>I am wrong</s></p>
+  <p><samp>Output: I am Sample Output from a program!</samp></p>
+  <p><small>I am small</small></p>
+  <p><strong>I am strong!</strong></p>
+  <p><sub>I am sub-scripted</sub></p>
+  <p><sup>and I am super-scripted</sup></p>
     
   </body>
 </html>
